# Hydrogens-Hypersphere

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  RQM_TECHNICAL_CANON_V2.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claims_matrix.md  conventions.md  director_summary.md  fock_bound_state_construction.md  limitations.md  mathematics.md  prior_art.md  scope_and_claims.md  spectral_energy_model.md  spectroscopy_baseline.md
scripts/: generate_report.py
simulator/: shell_locking_test.py
src/hydrogen_s3/: __init__.py  angular_momentum.py  angular_tensors.py  branching.py  clebsch_gordan.py  reference_spectroscopy.py  spectrum.py
src/hydrogen_s3/data/: hydrogen_reference_lines.csv  hydrogen_reference_lines_provenance.md
src/hydrogen_s3/fock/: __init__.py  bound_states.py  conventions.py  coulomb_kernel.py  diagnostics.py  harmonics.py  so4.py  stereographic.py  transforms.py
tests/: test_angular_momentum.py  test_angular_tensors.py  test_branching.py  test_clebsch_gordan.py  test_fock_bound_states.py  test_fock_harmonics.py  test_fock_kernel.py  test_fock_quantization.py  test_fock_so4.py  test_fock_stereographic.py  test_fock_transforms.py  test_public_anchor_docs.py  test_reference_spectroscopy.py  test_spectrum.py
