[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrogen-s3"
version = "0.2.0"
description = "S^3/SO(4) representation organization of nonrelativistic hydrogen shells"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "sympy",
]

[project.optional-dependencies]
plot = [
  "matplotlib",
]
dev = [
  "build",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hydrogen_s3 = ["data/*.csv", "data/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["hydrogen_s3"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["sympy", "sympy.physics.*"]
ignore_missing_imports = true
